2003-01-09  Lukas Geyer  <lukas@debian.org>

	* rename et ElapsedTime
	
	* Clean up timer code

	* Further changes on pondering and input handling

2003-01-09 Simon Waters <Simon@wretched.demon.co.uk>

	* Change version ID to 5.06

2002-12-30  Lukas Geyer  <lukas@debian.org>

	* Corrected threading code to consume input correctly

	* Corrections to comments

	* debug.c added

2002-12-22  Stuart Cracraft <cracraft@earthlink.net>

	* Reinstate penalty for having no queens on in
	  eval.c (spotted by Tim Bedding)

2002-12-22  Lukas Geyer  <lukas@debian.org>

	* Extra location for book checked 
	  /usr/share/games/gnuchess/book.dat

	* Correct handling of name

	* Fix problem with slow exit if pondering

	* Fix memset error

	* Misc tidying of 'const' usage

2002-12-19  Simon Waters <simon@wretched.demon.co.uk>

	* 1/20th second sleep in input loop, to avoid
	  CPU hogging in easy mode.

2002-12-16  Simon Waters <simon@wretched.demon.co.uk>

	* The main development version reverts to Lukas's
	  version as of 2002-10-05

	* epd.c merged from 5.05

	* book random in help change merged from 5.05

	* Fix to not store score in hashtable when time
	  expired, as score has special value.

2002-10-05  Lukas Geyer  <lukas@debian.org>

	* Added copyright and license notices to ponder.c, input.c,
	  updated copyright years to 1999-2002 in all source files.

	* Updated NEWS file to really list user-visible changes
	  between releases, still not complete.

	* Updated my email address.

	* version.c: Removed as obsolete.

	* pgn.c: Fixed potential buffer overflow. (Thanks to David
	  Wheeler for this one.)

	* common.h: Added comments by David A. Wheeler.

	* cmd.c: Added support for "easy" and "hard" (disable/enable
	  pondering)

	* main.c: Default to "nopost".

	* common.h: Added #include <sys/types.h>, needed for some
	  pthread implementations, it seems.

2002-08-25  Lukas Geyer  <lukas@debian.org>

	* Merged Simon's and my version, reverted some stuff like changing